--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -1,7 +1,9 @@
 services:
   - type: web
-    name: deteccion-objetos
+    name: deteccion-de-objetos
     env: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn backend.main:app --host 0.0.0.0 --port $PORT"
-    plan: free
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn backend.main:app --host 0.0.0.0 --port 10000
+    envVars:
+      - key: PORT
+        value: 10000
