--- a/render.yaml
+++ b/render.yaml
@@ -7,3 +7,5 @@ services:
     envVars:
       - key: PORT
         value: 10000
+      - key: RENDER_URL
+        value: https://deteccion-de-objetos-con-webcam.onrender.com
